fix: too much whitespace below trade params

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -99,7 +99,7 @@
         margin-bottom: 0.5em;
         flex-direction: column;
         flex-wrap: nowrap;
-        min-height: 25em;
+        min-height: 21em;
 
         .duration-input {
             .numeric-input {
